tools/playbooks/gitlab/deploy.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"gitlab"},"name":"gitlab-deployment","namespace":"gitlab"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"gitlab"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"labels":{"app":"gitlab"}},"spec":{"containers":[{"env":[{"name":"DEBUG","value":"true"},{"name":"GITLAB_EXTERNAL_HOSTNAME","value":"gitlab.code-triarii.com"},{"name":"GITLAB_EXTERNAL_SCHEME","value":"http"},{"name":"GITLAB_ [...]
    creationTimestamp: "2024-03-07T17:03:16Z"
    generation: 2
    labels:
      app: gitlab
    name: gitlab-deployment
    namespace: gitlab
    resourceVersion: "75519991"
    uid: 3768fb79-6285-4001-880d-08c7b9a85f0f
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: gitlab
    strategy:
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: gitlab
      spec:
        containers:
        - env:
          - name: DEBUG
            value: "true"
          - name: GITLAB_EXTERNAL_HOSTNAME
            value: gitlab.code-triarii.com
          - name: GITLAB_EXTERNAL_SCHEME
            value: http
          - name: GITLAB_SECRETS_DB_KEY_BASE
            valueFrom:
              secretKeyRef:
                key: gitlab_secrets_db_key_base
                name: gitlab-enc-secrets
          - name: GITLAB_SECRETS_SECRET_KEY_BASE
            valueFrom:
              secretKeyRef:
                key: gitlab_secrets_secret_key_base
                name: gitlab-enc-secrets
          - name: GITLAB_SECRETS_OTP_KEY_BASE
            valueFrom:
              secretKeyRef:
                key: gitlab_secrets_otp_key_base
                name: gitlab-enc-secrets
          - name: GITLAB_ROOT_PASSWORD
            value: rootPass
          - name: GITLAB_ROOT_EMAIL
            value: root@example.com
          - name: GITLAB_HOST
            value: gitlab.code-triarii.com
          - name: GITLAB_PORT
            value: "80"
          - name: GITLAB_SSH_HOST
            value: ssh-gitlab.code-triarii.com
          - name: GITLAB_SSH_PORT
            value: "1022"
          - name: GITLAB_NOTIFY_ON_BROKEN_BUILDS
            value: "true"
          - name: GITLAB_NOTIFY_PUSHER
            value: "false"
          - name: GITLAB_BACKUP_SCHEDULE
            value: daily
          - name: GITLAB_BACKUP_TIME
            value: "01:00"
          - name: DB_TYPE
            value: postgres
          - name: DB_HOST
            value: gitlab-postgresql
          - name: DB_PORT
            value: "5432"
          - name: DB_USER
            valueFrom:
              secretKeyRef:
                key: username
                name: gitlab-postgres-credentials
          - name: DB_PASS
            valueFrom:
              secretKeyRef:
                key: password
                name: gitlab-postgres-credentials
          - name: DB_NAME
            valueFrom:
              secretKeyRef:
                key: db_name
                name: gitlab-postgres-credentials
          - name: REDIS_HOST
            value: gitlab-redis
          - name: REDIS_PORT
            value: "6379"
          - name: SMTP_ENABLED
            value: "false"
          - name: SMTP_DOMAIN
          - name: SMTP_HOST
          - name: SMTP_PORT
          - name: SMTP_USER
          - name: SMTP_PASS
          - name: SMTP_STARTTLS
            value: "true"
          - name: SMTP_AUTHENTICATION
            value: login
          - name: IMAP_ENABLED
            value: "false"
          - name: IMAP_HOST
            value: imap.gmail.com
          - name: IMAP_PORT
            value: "993"
          - name: IMAP_USER
            value: mailer@example.com
          - name: IMAP_PASS
            value: password
          - name: IMAP_SSL
            value: "true"
          - name: IMAP_STARTTLS
            value: "false"
          image: gitlab/gitlab-ce:16.5.7-ce.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /users/sign_in
              port: 80
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 15
          name: gitlab
          ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 22
            name: ssh
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /users/sign_in
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/opt/gitlab
            name: gitlab-web
          - mountPath: /etc/gitlab
            name: gitlab-config
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: gitlab-web
          persistentVolumeClaim:
            claimName: web-pv-claim
        - name: gitlab-config
          persistentVolumeClaim:
            claimName: config-pv-claim
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-03-07T17:03:16Z"
      lastUpdateTime: "2024-03-08T09:40:16Z"
      message: ReplicaSet "gitlab-deployment-8c74c974f" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-05-02T11:25:42Z"
      lastUpdateTime: "2024-05-02T11:25:42Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"gitlab-postgresql","namespace":"gitlab"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"gitlab-postgresql"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"labels":{"app":"gitlab-postgresql"}},"spec":{"containers":[{"env":[{"name":"DB_USER","valueFrom":{"secretKeyRef":{"key":"username","name":"gitlab-postgres-credentials"}}},{"name":"DB_PASS","valueFrom":{"secretKeyRef":{"key":"password","na [...]
    creationTimestamp: "2024-03-07T16:29:44Z"
    generation: 2
    name: gitlab-postgresql
    namespace: gitlab
    resourceVersion: "78763197"
    uid: 37351b2b-358b-4352-99f5-f6678217342f
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: gitlab-postgresql
    strategy:
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: gitlab-postgresql
      spec:
        containers:
        - env:
          - name: DB_USER
            valueFrom:
              secretKeyRef:
                key: username
                name: gitlab-postgres-credentials
          - name: DB_PASS
            valueFrom:
              secretKeyRef:
                key: password
                name: gitlab-postgres-credentials
          - name: DB_NAME
            valueFrom:
              secretKeyRef:
                key: db_name
                name: gitlab-postgres-credentials
          - name: DB_EXTENSION
            value: pg_trgm
          image: sameersbn/postgresql:9.5-3
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
              - pg_isready
              - -h
              - localhost
              - -U
              - postgres
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: postgresql
          ports:
          - containerPort: 5432
            name: postgres
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - pg_isready
              - -h
              - localhost
              - -U
              - postgres
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib
            name: postgresql
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgres-pv-claim
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-03-07T16:29:44Z"
      lastUpdateTime: "2024-03-07T16:39:28Z"
      message: ReplicaSet "gitlab-postgresql-64df8565d5" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-05-09T11:27:29Z"
      lastUpdateTime: "2024-05-09T11:27:29Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
