tools/playbooks/gitlab/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"name":"gitlab"},"name":"gitlab","namespace":"gitlab"},"spec":{"ports":[{"name":"http","port":80,"targetPort":"http"},{"name":"ssh","port":1022,"targetPort":"ssh"}],"selector":{"app":"gitlab"}}}
    creationTimestamp: "2024-03-07T16:43:13Z"
    labels:
      name: gitlab
    name: gitlab
    namespace: gitlab
    resourceVersion: "50178500"
    uid: ad29db2f-775f-4fb9-999e-10db1dfd2264
  spec:
    clusterIP: 10.107.115.170
    clusterIPs:
    - 10.107.115.170
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: ssh
      port: 1022
      protocol: TCP
      targetPort: ssh
    selector:
      app: gitlab
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"name":"gitlab-postgresql"},"name":"gitlab-postgresql","namespace":"gitlab"},"spec":{"ports":[{"name":"postgres","port":5432,"targetPort":"postgres"}],"selector":{"name":"gitlab-postgresql"}}}
    creationTimestamp: "2024-03-07T16:29:44Z"
    labels:
      name: gitlab-postgresql
    name: gitlab-postgresql
    namespace: gitlab
    resourceVersion: "50174114"
    uid: 63bae838-3f13-46dc-8a61-c1fa372bcebf
  spec:
    clusterIP: 10.96.103.129
    clusterIPs:
    - 10.96.103.129
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: postgres
    selector:
      name: gitlab-postgresql
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
